[package]
name = "gdrust_kit"
version = "0.1.0"
edition = "2021"
description = "A toolkit of Rust utilities for Godot game development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robotnik-dev/gdrust_kit"
authors = ["Robotnik <robotnik.games@gmail.com>"]
readme = "README.md"

[workspace]
members = [
    ".",
    "crates/*"
]
resolver = "2"

[dependencies]
gdrust_pathfinding = { path = "crates/gdrust_pathfinding", version = "0.1.0", optional = true }
gdrust_collision = { path = "crates/gdrust_collision", version = "0.1.0", optional = true }

[features]
default = []

pathfinding = ["gdrust_pathfinding"]
collision = ["gdrust_collision"]

all = ["pathfinding", "collision"]

dev = ["all"]
