[package]
name = "gdrust_kit"
version = "0.1.1"
edition = "2021"
description = "A toolkit of Rust utilities for Godot game development"
license = "MIT"
repository = "https://github.com/robotnik-dev/gdrust_kit"
authors = ["Robotnik <robotnik.games@gmail.com>"]
readme = "README.md"

[workspace]
members = [
    ".",
    "crates/*"
]
resolver = "2"

[dependencies]
gdrust_pathfinding = { path = "crates/gdrust_pathfinding", version = "^0.1.1", optional = true }
gdrust_collision = { path = "crates/gdrust_collision", version = "^0.1.1", optional = true }
gdrust_player_controller = { path = "crates/gdrust_player_controller", version = "^0.1.0", optional = true }
gdrust_utils = { path = "crates/gdrust_utils", version = "^0.1.0", optional = true }

[features]
default = []

pathfinding = ["gdrust_pathfinding"]
collision = ["gdrust_collision"]
player_controller = ["gdrust_player_controller"]
utils = ["gdrust_utils"]

all = ["pathfinding", "collision", "player_controller", "utils"]

dev = ["all"]
