[package]
name = "gdrust_collision"
version = "0.1.1"
edition = "2021"
description = "Collision tools for Rust Godot development"
license = "MIT"
repository = "https://github.com/robotnik-dev/gdrust_kit"
authors = ["Robotnik <robotnik.games@gmail.com>"]
readme = "README.md"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]
