[package]
name = "gdrust_collision"
version = "0.1.1"
edition = "2021"
description = "Collision tools for Rust Godot development"
license = "MIT"
repository = "https://github.com/robotnik-dev/gdrust_kit"
authors = ["Robotnik <robotnik.games@gmail.com>"]
readme = "README.md"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
version = "0.2.4"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]
