[package]
name = "gdrust_player_controller"
version = "0.1.0"
edition = "2024"
description = "Tools for managing player input and controls"
license = "MIT"
repository = "https://github.com/robotnik-dev/gdrust_kit"
authors = ["Robotnik <robotnik.games@gmail.com>"]
readme = "README.md"

[dependencies]
godot = { version = "0.2.4" }
