[package]
name = "gdrust_utils"
version = "0.1.0"
edition = "2021"
description = "Utility tools for Rust Godot development"
license = "MIT"
repository = "https://github.com/robotnik-dev/gdrust_kit"
authors = ["Robotnik <robotnik.games@gmail.com>"]
readme = "README.md"

[dependencies]
godot = { version = "0.3.1" }
